优化内存使用